Fix dark mode, dynamically populate sound types

--- a/SoundTest/Shared/MainLayout.razor.css
+++ b/SoundTest/Shared/MainLayout.razor.css
@@ -9,7 +9,8 @@
 }
 
 .sidebar {
-    background-color: #f7f7f7;
+    background-color: var(--background);
+    color: var(--font-color);
     border-bottom: 1px solid #d6d5d5;
     justify-content: flex-end;
     display: flex;
